Update firebase urls and fix some graph layout issues

--- a/chat/static/chat/css/chat.css
+++ b/chat/static/chat/css/chat.css
@@ -149,6 +149,7 @@ a {
     color: #ffffff;
     font-weight: 500;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 
 /* Visualisations Tab */
 .xAxis path,
@@ -156,6 +157,10 @@ a {
     fill: none;
     stroke: black;
     shape-rendering: crispEdges;
+}
+
+.chat-vis-container {
+    padding: 6px;
 }
 
 
